--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<script type="text/javascript" src="static/js/angular-1.5.8.js"></script>
 		<script type="text/javascript" src="static/js/angular-route.js"></script>
 		<script type="text/javascript" src="app/app.js"></script>
+		<script type="text/javascript" src="app/service/voteServices.js"></script>
+		<script type="text/javascript" src="app/filter/voteFilters.js"></script>
+		<script type="text/javascript" src="app/directive/voteDirectives.js"></script>
 		<script type="text/javascript" src="app/controller/voteControllers.js"></script>
 	</body>
 </html>
